Fixed small bugs

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
             </a>
             <ul class="dropdown-list">
                 <li>
+                    <a href="#" id="top-rated-movie">
+                        <span>Топ фильмов</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="popular-movie">
+                        <span>Популярные фильмы</span>
+                    </a>
+                </li>
+                <li>
                     <a href="#" id="top-rated-tv">
                         <span>Топ сериалов и шоу</span>
                     </a>
@@ -68,6 +78,34 @@
                 <li>
                     <a href="#" id="week-tv">
                         <span>На неделю</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="upcoming-tv">
+                        <span>Скоро на экранах</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" class="dropdown">
+                <i class="fa fa-film" aria-hidden="true"></i>
+                <span>ФИЛЬМЫ</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#" id="today-movie">
+                        <span>Сегодня</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="week-movie">
+                        <span>На неделю</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="upcoming-movie">
+                        <span>Скоро на экранах</span>
                     </a>
                 </li>
             </ul>
@@ -99,8 +137,7 @@
 <main>
     <div class="container">
         <div class="btn-container">
-            <button>Фильмы</button>
-            <button>Сериалы</button>
+            <button class="btn-search">Подробный поиск</button>
         </div>
         <section class="tv-shows">
             <h3 class="tv-shows__head"></h3>
