Simple search function added

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <button class="btn-up" style="visibility: hidden">Наверх</button>
 
 <script src="script/DBService.js"></script>
-<script src="script/Card.js"></script>
+<script src="script/CardRenderer.js"></script>
 <script src="script/main.js"></script>
 
 <script src="https://use.fontawesome.com/c79e2f3459.js"></script>
