--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
             </a>
             <ul class="dropdown-list">
                 <li>
+                    <a href="#" id="trending-day">
+                        <span>Популярно сегодня</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="trending-week">
+                        <span>Популярно на этой неделе</span>
+                    </a>
+                </li>
+                <li>
                     <a href="#" id="top-rated-movie">
                         <span>Топ фильмов</span>
                     </a>
