--- a/index.html
+++ b/index.html
@@ -122,13 +122,14 @@
         </hgroup>
 
         <section class="search">
+            <h2 class="search__form-head">Быстрый поиск</h2>
             <form class="search__form">
-                <h2 class="search__form-head">Поиск</h2>
-                <label class="search__form-block">
-                    <input type="text" class="search__form-input" id="searchText"
-                           placeholder="Введите название...">
-                </label>
-                <!--                <button type="submit">Поиск</button>-->
+                <input type="text" class="search__form-input" id="searchText"
+                       placeholder="Введите название...">
+                <button class="btn-fast-search" type="submit">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </button>
+                <hr class="search__form-hr">
             </form>
         </section>
     </div>
