Changed css style

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#00aba9">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#020814">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
@@ -32,43 +32,43 @@
         <li>
             <a href="#" id="search">
                 <i class="fa fa-search" aria-hidden="true"></i>
-                <span>ПОИСК</span>
+                <span class="span-title">ПОИСК</span>
             </a>
         </li>
         <li>
             <a href="#" class="dropdown">
                 <i class="fa fa-trophy" aria-hidden="true"></i>
-                <span>РЕЙТИНГ</span>
+                <span class="span-title">РЕЙТИНГ</span>
             </a>
             <ul class="dropdown-list">
                 <li>
                     <a href="#" id="trending-day">
-                        <span>Популярно сегодня</span>
+                        <span class="span-text">Популярно сегодня</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="trending-week">
-                        <span>Популярно на этой неделе</span>
+                        <span class="span-text">Популярно на этой неделе</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="top-rated-movie">
-                        <span>Топ фильмов</span>
+                        <span class="span-text">Топ фильмов</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="popular-movie">
-                        <span>Популярные фильмы</span>
+                        <span class="span-text">Популярные фильмы</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="top-rated-tv">
-                        <span>Топ сериалов и шоу</span>
+                        <span class="span-text">Топ сериалов и шоу</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="popular-tv">
-                        <span>Популярные сериалы и шоу</span>
+                        <span class="span-text">Популярные сериалы и шоу</span>
                     </a>
                 </li>
 
@@ -77,17 +77,17 @@
         <li>
             <a href="#" class="dropdown">
                 <i class="fa fa-tv" aria-hidden="true"></i>
-                <span>СЕРИАЛЫ И ШОУ</span>
+                <span class="span-title">СЕРИАЛЫ И ШОУ</span>
             </a>
             <ul class="dropdown-list">
                 <li>
                     <a href="#" id="today-tv">
-                        <span>Сегодня</span>
+                        <span class="span-text">Сегодня</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="week-tv">
-                        <span>На неделю</span>
+                        <span class="span-text">На неделю</span>
                     </a>
                 </li>
             </ul>
@@ -95,17 +95,17 @@
         <li>
             <a href="#" class="dropdown">
                 <i class="fa fa-film" aria-hidden="true"></i>
-                <span>ФИЛЬМЫ</span>
+                <span class="span-title">ФИЛЬМЫ</span>
             </a>
             <ul class="dropdown-list">
                 <li>
                     <a href="#" id="now-playing-movie">
-                        <span>Новейшие</span>
+                        <span class="span-text">Новейшие</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="newest-movie">
-                        <span>Сейчас на экранах</span>
+                        <span class="span-text">Сейчас на экранах</span>
                     </a>
                 </li>
             </ul>
@@ -202,18 +202,6 @@
             <span></span>
             <span></span>
         </div>
-    </div>
-</div>
-
-
-<div class="preloader">
-    <div class="preloader-wrapper">
-        <div class="preloader-one"></div>
-        <div class="preloader-one"></div>
-        <div class="preloader-one"></div>
-        <div class="preloader-one"></div>
-        <div class="preloader-two"></div>
-        <div class="preloader-three"></div>
     </div>
 </div>
 
