--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </div>
     <ul class="left-menu__list">
         <li>
-            <a href="#" id="search">
-                <i class="fa fa-search" aria-hidden="true"></i>
-                <span class="span-title">ПОИСК</span>
+            <a href="#" id="home">
+                <i class="fa fa-home" aria-hidden="true"></i>
+                <span class="span-title">НА ГЛАВНУЮ</span>
             </a>
         </li>
         <li>
@@ -76,24 +76,6 @@
         </li>
         <li>
             <a href="#" class="dropdown">
-                <i class="fa fa-tv" aria-hidden="true"></i>
-                <span class="span-title">СЕРИАЛЫ И ШОУ</span>
-            </a>
-            <ul class="dropdown-list">
-                <li>
-                    <a href="#" id="today-tv">
-                        <span class="span-text">Сегодня</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" id="week-tv">
-                        <span class="span-text">На неделю</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <a href="#" class="dropdown">
                 <i class="fa fa-film" aria-hidden="true"></i>
                 <span class="span-title">ФИЛЬМЫ</span>
             </a>
@@ -106,6 +88,24 @@
                 <li>
                     <a href="#" id="newest-movie">
                         <span class="span-text">Сейчас на экранах</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" class="dropdown">
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <span class="span-title">СЕРИАЛЫ И ШОУ</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#" id="today-tv">
+                        <span class="span-text">Сегодня</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="week-tv">
+                        <span class="span-text">На неделю</span>
                     </a>
                 </li>
             </ul>
