Detailed search prototype version for testing

--- a/index.html
+++ b/index.html
@@ -147,13 +147,25 @@
             <div class="search-param-container">
                 <div class="search-param-elem">
                     <h3 class="param-title">Категория поиска: </h3>
-                    <div class ="params-container">
-                        <button class="param-btn">Фильмы</button>
-                        <button class="param-btn">Сериалы & Шоу</button>
+                    <div class ="main-params-container">
+                        <button class="main-param-btn param-inactive" id="movieFilter">Фильмы</button>
+                        <button class="main-param-btn param-inactive" id="tvFilter">Сериалы & Шоу</button>
                     </div>
                 </div>
+                <section class="detailed-search-movie-params" style="display: none">
+                    <div class="search-param-elem">
+                        <h3 class="param-title">Сортировать по: </h3>
+                        <div class ="sort-by-params-container">
+                            <button class="sort-by-param-btn param-inactive" id="popularity">Популярность</button>
+                            <button class="sort-by-param-btn param-inactive" id="releaseDate">Дата выхода</button>
+                            <button class="sort-by-param-btn param-inactive" id="originalTitle">Название</button>
+                            <button class="sort-by-param-btn param-inactive" id="voteAverage">Оценка</button>
+                            <button class="sort-by-param-btn param-inactive" id="voteCount">Число голосов</button>
+                        </div>
+                    </div>
+                </section>
                 <div class="btn-container-search">
-                    <button class="btn-detailed-search-apply">Искать</button>
+                    <button class="btn-detailed-search-apply param-inactive" type="submit">Искать</button>
                 </div>
             </div>
         </section>
@@ -226,6 +238,7 @@
 
 <script src="script/DBService.js"></script>
 <script src="script/CardRenderer.js"></script>
+<script src="script/DetailedSearch.js"></script>
 <script src="script/main.js"></script>
 
 <script src="https://use.fontawesome.com/c79e2f3459.js"></script>
