If statements changed to switch cases & small optimizations

--- a/index.html
+++ b/index.html
@@ -147,20 +147,20 @@
             <div class="search-param-container">
                 <div class="search-param-elem">
                     <h3 class="param-title">Категория поиска: </h3>
-                    <div class ="main-params-container">
-                        <button class="main-param-btn param-inactive" id="movieFilter">Фильмы</button>
-                        <button class="main-param-btn param-inactive" id="tvFilter">Сериалы & Шоу</button>
+                    <div class ="detailed-search-param-container main-params-container">
+                        <button class="detailed-search-param-btn main-param-btn param-inactive" id="movieFilter">Фильмы</button>
+                        <button class="detailed-search-param-btn main-param-btn param-inactive" id="tvFilter">Сериалы & Шоу</button>
                     </div>
                 </div>
                 <section class="detailed-search-movie-params" style="display: none">
                     <div class="search-param-elem">
                         <h3 class="param-title">Сортировать по: </h3>
-                        <div class ="sort-by-params-container">
-                            <button class="sort-by-param-btn param-inactive" id="popularity">Популярность</button>
-                            <button class="sort-by-param-btn param-inactive" id="releaseDate">Дата выхода</button>
-                            <button class="sort-by-param-btn param-inactive" id="originalTitle">Название</button>
-                            <button class="sort-by-param-btn param-inactive" id="voteAverage">Оценка</button>
-                            <button class="sort-by-param-btn param-inactive" id="voteCount">Число голосов</button>
+                        <div class ="detailed-search-param-container sort-by-params-container">
+                            <button class="detailed-search-param-btn sort-by-param-btn param-inactive" id="popularity">Популярность</button>
+                            <button class="detailed-search-param-btn sort-by-param-btn param-inactive" id="releaseDate">Дата выхода</button>
+                            <button class="detailed-search-param-btn sort-by-param-btn param-inactive" id="originalTitle">Название</button>
+                            <button class="detailed-search-param-btn sort-by-param-btn param-inactive" id="voteAverage">Оценка</button>
+                            <button class="detailed-search-param-btn sort-by-param-btn param-inactive" id="voteCount">Число голосов</button>
                         </div>
                     </div>
                 </section>
