--- a/index.html
+++ b/index.html
@@ -147,20 +147,54 @@
             <div class="search-param-container">
                 <div class="search-param-elem">
                     <h3 class="param-title">Категория поиска: </h3>
-                    <div class ="main-params-container">
-                        <button class="main-param-btn param-inactive" id="movieFilter">Фильмы</button>
-                        <button class="main-param-btn param-inactive" id="tvFilter">Сериалы & Шоу</button>
+                    <div class ="ds-param main-params-container">
+                        <button class="ds-btn main-param-movie-btn param-inactive" id="movieFilter">Фильмы</button>
+                        <button class="ds-btn main-param-tv-btn param-inactive" id="tvFilter">Сериалы & Шоу</button>
                     </div>
                 </div>
                 <section class="detailed-search-movie-params" style="display: none">
                     <div class="search-param-elem">
+                        <h3 class="param-title">Тип сортировки: </h3>
+                        <div class ="ds-param sort-by-type-container">
+                            <button class="ds-btn sort-by-type-btn param-inactive" id="descending">По убыванию</button>
+                            <button class="ds-btn sort-by-type-btn param-inactive" id="ascending">По возрастанию</button>
+                        </div>
+                    </div>
+                    <div class="search-param-elem">
                         <h3 class="param-title">Сортировать по: </h3>
-                        <div class ="sort-by-params-container">
-                            <button class="sort-by-param-btn param-inactive" id="popularity">Популярность</button>
-                            <button class="sort-by-param-btn param-inactive" id="releaseDate">Дата выхода</button>
-                            <button class="sort-by-param-btn param-inactive" id="originalTitle">Название</button>
-                            <button class="sort-by-param-btn param-inactive" id="voteAverage">Оценка</button>
-                            <button class="sort-by-param-btn param-inactive" id="voteCount">Число голосов</button>
+                        <div class ="ds-param sort-by-params-container">
+                            <button class="ds-btn sort-by-param-btn param-inactive" id="popularity">Популярность</button>
+                            <button class="ds-btn sort-by-param-btn param-inactive" id="releaseDate">Дата выхода</button>
+                            <button class="ds-btn sort-by-param-btn param-inactive" id="originalTitle">Название</button>
+                            <button class="ds-btn sort-by-param-btn param-inactive" id="voteAverage">Оценка</button>
+                            <button class="ds-btn sort-by-param-btn param-inactive" id="voteCount">Число голосов</button>
+                        </div>
+                    </div>
+                    <div class="search-param-elem">
+                        <h3 class="param-title">Жанр: </h3>
+                        <div class ="ds-param">
+                            <button class="ds-btn genres-select-all param-inactive">Убрать все</button>
+                        </div>
+                        <div class ="ds-param genres-container">
+                            <button class="ds-btn genre-btn param-inactive" id="action">Боевик</button>
+                            <button class="ds-btn genre-btn param-inactive" id="adventure">Приключения</button>
+                            <button class="ds-btn genre-btn param-inactive" id="animation">Мультфильм</button>
+                            <button class="ds-btn genre-btn param-inactive" id="comedy">Комедия</button>
+                            <button class="ds-btn genre-btn param-inactive" id="crime">Криминал</button>
+                            <button class="ds-btn genre-btn param-inactive" id="documentary">Документальный</button>
+                            <button class="ds-btn genre-btn param-inactive" id="drama">Драма</button>
+                            <button class="ds-btn genre-btn param-inactive" id="family">Семейный</button>
+                            <button class="ds-btn genre-btn param-inactive" id="fantasy">Фэнтези</button>
+                            <button class="ds-btn genre-btn param-inactive" id="history">История</button>
+                            <button class="ds-btn genre-btn param-inactive" id="horror">Ужасы</button>
+                            <button class="ds-btn genre-btn param-inactive" id="music">Музыка</button>
+                            <button class="ds-btn genre-btn param-inactive" id="mystery">Детектив</button>
+                            <button class="ds-btn genre-btn param-inactive" id="romance">Мелодрама</button>
+                            <button class="ds-btn genre-btn param-inactive" id="science-fiction">Фантастика</button>
+                            <button class="ds-btn genre-btn param-inactive" id="tv-movie">ТВ фильм</button>
+                            <button class="ds-btn genre-btn param-inactive" id="thriller">Триллер</button>
+                            <button class="ds-btn genre-btn param-inactive" id="war">Военный</button>
+                            <button class="ds-btn genre-btn param-inactive" id="western">Вестерн</button>
                         </div>
                     </div>
                 </section>
