Fixed code perfomance & deleted code duplications

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         <div class="btn-container">
             <button class="btn-detailed-search">Подробный поиск</button>
         </div>
+
         <section class="detailed-search" style="display: none">
             <div class="btn-container-search">
                 <button class="btn-detailed-search-cancel">Отмена</button>
@@ -152,6 +153,7 @@
                         <button class="ds-btn main-param-tv-btn param-inactive" id="tvFilter">Сериалы & Шоу</button>
                     </div>
                 </div>
+
                 <section class="detailed-search-movie-params" style="display: none">
                     <div class="search-param-elem">
                         <h3 class="param-title">Тип сортировки: </h3>
@@ -198,11 +200,13 @@
                         </div>
                     </div>
                 </section>
+
                 <div class="btn-container-search">
                     <button class="btn-detailed-search-apply param-inactive" type="submit">Искать</button>
                 </div>
             </div>
         </section>
+
         <section class="cards">
             <h3 class="cards__head"></h3>
             <ul class="cards__list"></ul>
@@ -273,6 +277,7 @@
 <script src="script/DBService.js"></script>
 <script src="script/CardRenderer.js"></script>
 <script src="script/DetailedSearch.js"></script>
+<script src="script/InfoRenderer.js"></script>
 <script src="script/main.js"></script>
 
 <script src="https://use.fontawesome.com/c79e2f3459.js"></script>
