Added min/max vote count param to detailed search

--- a/index.html
+++ b/index.html
@@ -204,6 +204,15 @@
                             <span class="slider round"></span>
                         </label>
                     </div>
+                    <div class="search-param-elem">
+                        <h3 class="param-title">Количество голосов: </h3>
+                        <div class ="ds-param vote-min-max-container">
+                            <button class="ds-btn vote-count-btn param-inactive" id="min">Не менее</button>
+                            <input type="number" class="vote-min-max-input" id="voteCountInput"
+                                   placeholder="Число" step="50" min="0" max="99950" value="">
+                            <button class="ds-btn vote-count-btn param-inactive" id="max">Не более</button>
+                        </div>
+                    </div>
                 </section>
 
                 <div class="btn-container-search">
