Added compatibility with Opera and Mozilla browsers using Babel

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                        placeholder="Minutes" step="1" min="0" max="59" value="">
                             </div>
                             <div class="ds-param">
-                                <button class="ds-btn runtime-btn param-inactive">Очистить</button>
+                                <button class="ds-btn runtime-btn param-inactive">Clear</button>
                             </div>
                         </div>
                     </div>
