--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
 
 <button class="btn-up" style="visibility: hidden">Move up</button>
 
-<script src="script/DBService.js"></script>
-<script src="script/CardRenderer.js"></script>
-<script src="script/DetailedSearch.js"></script>
-<script src="script/InfoRenderer.js"></script>
-<script src="script/main.js"></script>
+<script src="prod_scripts/DBService.js"></script>
+<script src="prod_scripts/CardRenderer.js"></script>
+<script src="prod_scripts/DetailedSearch.js"></script>
+<script src="prod_scripts/InfoRenderer.js"></script>
+<script src="prod_scripts/main.js"></script>
 
 <script src="https://use.fontawesome.com/c79e2f3459.js"></script>
 
